--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="Meio" id="meio">
             <h1>ESTILO URBANO AUTÊNTICO:</h1>
             <h1>STREETWEAR QUE EXPRESSAM SUA ATITUDE ÚNICA.</h1>
-            <P>Novas cores, agora também disponível no tamanho dos homens</P>
+            <P>Novas cores disponíveis no tamanho Masculino.</P>
            <a href="https://wa.me/message/GQV4ZHBFP5JXK1"><button>Entre em contato conosco.</button></a>
         </div><!--Meio-->
     </div><!--background-->
