--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div> <!--cards-->
 
             <div class="cards">
-                <a href="#street">STREETWEAR</a>
+                <a href="#street">CAMISETAS URBANAS</a>
                 <img src="/img/branco.jpeg">
                 <!--streetwear-->
             </div> <!--cards-->
