--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h1>CATEGORIAS</h1>
         <div class="Container-card-1"><!--camisas de time-->
             <div class="cards">
-                <a href="#time">CAMISAS DE TIME</a>
+                <a href="#time">MANTO CLASSE A</a>
                 <img src="img/1.jpeg">
             </div><!--cards-->
 
